--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "rpc-websockets": "4.0.0"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.5",
+    "date-fns": "^2.0.0-beta.5",
     "immutable": "3.8.2",
     "moment": "^2.24.0",
     "react": "^16.9.0",
