--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.2.1",
-    "immutable": "3.8.2",
+    "@material-ui/lab": "^4.0.0-alpha.26",
+    "immutable": "^4.0.0-rc.12",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
